Bug 1267579 - Unexpected result when using OscillatorNode with custom wave shape; r=padenot a=ritu

This fixes some division by zero errors introduced by Bug 1222405 when the
fundamental frequency is zero.

MozReview-Commit-ID: A7qfJjJOJ3H